# ComplaintsFastApi

./: .gitignore  Makefile  README.md  alembic.ini  constants.py  db.py  main.py  pyproject.toml
app/: __init__.py  db.py  main.py  pyproject.toml  settings.py
app/managers/: auth.py  complaint.py  user.py
app/migrations/: env.py
app/migrations/versions/: 3c0784195e46_initial.py  a40545317e24_chaned_column_name_status_to_state.py
app/models/: complaint.py  enums.py  user.py
app/resources/: auth.py  complaint.py  health.py  routes.py  user.py
app/schemas/: base.py
app/schemas/request/: complaint.py  user.py
app/schemas/response/: complaint.py  user.py
app/services/: __init__.py  s3.py  ses.py  wise.py
app/utils/: helpers.py
commands/: create_super_user.py
docker/: Dockerfile
managers/: auth.py  complaint.py  user.py
migrations/: env.py
migrations/versions/: 64860c9876a2_added_phone_column_to_user.py
models/: __init__.py  complaint.py  user.py
resources/: auth.py  complaint.py  user.py
schemas/: base.py
schemas/request/: complaint.py
schemas/response/: complaint.py  user.py
services/: s3.py  ses.py
utils/: helpers.py
